--- a/1.课程介绍/课程介绍1.md
+++ b/1.课程介绍/课程介绍1.md
@@ -57,7 +57,7 @@ Lab 3: fault-tolerant key/value store
 Lab 4: sharded key/value store
 ```
 
-1. MapReduce 实现几点的 MapReduce 版本。
+1. MapReduce 实现简单的 MapReduce 版本。
 2. Raft 技术 容错技术
 3. fault-tolerant key/value store 容错的kv服务器，该服务器可以复制被容错
 4. sharded key/value store 实现一个数据分片到各个 group 中，各个 group 中的服务器内部又是主从复制的 
