--- a/1.课程介绍/课程介绍3.md
+++ b/1.课程介绍/课程介绍3.md
@@ -14,7 +14,7 @@ Topic: fault tolerance
     Labs 1, 2 and 3
 ```
 
-为了防止一台机器挂掉时，我们需要通过容错来保证我们的分布式系统能正常运行。也就是需要保证我们的可用性(Availability)。除了保证我们的可用性外，我们还需要保证我们的恢复性(Recoverability)。出现问题时候，我们有办法把数据恢复到出问题之前，或者减少这种出问题造成的损失。对于容错我们还有另一种重要的工具就是复制(Replication)
+为了防止一台机器挂掉时，我们需要通过容错来保证我们的分布式系统能正常运行。也就是需要保证我们的可用性(Availability)。除了保证我们的可用性外，我们还需要保证我们的恢复性(Recoverability)。出现问题时候，我们有办法把数据恢复到出问题之前，或者减少这种出问题造成的损失。对于容错我们还有另一种重要的工具就是复制(Replication)。
 
 ## Topic4：一致性(consistency)
 
